--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
         </dependency>
         <!-- Thanks for using https://jar-download.com -->
 
+        <!-- https://mvnrepository.com/artifact/com.github.lgooddatepicker/LGoodDatePicker -->
+        <dependency>
+            <groupId>com.github.lgooddatepicker</groupId>
+            <artifactId>LGoodDatePicker</artifactId>
+            <version>11.2.1</version>
+        </dependency>
+
 
     </dependencies>
     
