--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,13 @@
             <version>11.2.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>4.1</version>
+        </dependency>
+
+
     </dependencies>
     
 </project>
